--- a/jquery_for_forms.html
+++ b/jquery_for_forms.html
@@ -6,13 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>jQuery for Forms</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script text="text/javascript"></script>
+    <script text="text/javascript">
+        //return false doesn't allow the page to refresh
+        //.submit can be used as a listener or as a hard submit
+        //.serialize preps forms being handled by a computer
+        $(document).ready(function() {
+            $('#form1').submit(function() {
+                console.log($(this).serialize());
+                return false
+            });
+            $('.btn').click(function() {
+                $('#form1').submit();
+            });
+        });
+    </script>
 </head>
 
 <body>
     <form action="process.php" id="form1" method="POST">
-        First name<input type="text" name="first_name"> Last name<input type="text" name="Last name"> Email
-        <input type="text" name="email">
+        First name<input type="text" name="first_name"> Last name<input type="text" name="Last name"> Email<input type="text" name="email">
         <input type="submit" value="submit!">
     </form>
     <button class="btn">Click me to use .submit() differently</button>
